--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
-Revision history for Perl HTML::Template::LZE::Pages 0.24
-
+Revision history for Perl HTML::Template::LZE::Pages 0.25
+0.25
+        a few fixes
 0.24
        refactoring.
 	a lot !
