Import of LZE/HTML-Template-LZE-Pages-0.26 from CPAN.
gitpan-cpan-distribution: HTML-Template-LZE-Pages
gitpan-cpan-version:      0.26
gitpan-cpan-path:         LZE/HTML-Template-LZE-Pages-0.26.tar.gz
gitpan-cpan-author:       LZE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,9 +1,7 @@
-Revision history for Perl HTML::Template::LZE::Pages 0.25
+Revision history for Perl HTML::Template::LZE::Pages 0.26
+0.26
+    Overwrought Docs and clean up code, fix build System
 0.25
         a few fixes
 0.24
        refactoring.
-	a lot !
-0.01  Sun Jan 22 01:37:35 2006
-	- original version; created by h2xs 1.23 with options
-		-XAn  HTML::Template::LZE::Pages
